--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "moonhea's weibo",
+  "name": "moonhea weibo",
   "version": "1.0.0",
   "description": "A stand-alone weibo for moonhea",
   "author": "Moonhea",
