--- a/content/desk/2021-11.yml
+++ b/content/desk/2021-11.yml
@@ -43,3 +43,8 @@ posts:
       - 可惜没法给你点赞了😫
     picture:
       - https://user-images.githubusercontent.com/72009576/142154422-d6beb2d3-fd53-44c9-9224-1eb282a15ad6.jpeg
+  - id: desk-2021-11-post008
+    time: '2021-11-17 23:48'
+    content: 
+      - 人间有情，人间有爱，我们最美丽的建国妈妈帮我注册了新的微博账号。
+      - 我胡汉三又杀回来了！
