--- a/content/desk/2021-11.yml
+++ b/content/desk/2021-11.yml
@@ -54,3 +54,10 @@ posts:
       - 新微博账号不能频繁操作，不能发太多微博，不能点太多赞，不然又要验证。
       - 虽然只是从左划到右的简单验证，但也足够让人心悸了。
       - 看来这个自建微博还是不能放弃的。
+  - id: desk-2021-11-post010
+    time: '2021-11-20 23:50'
+    content: 
+      - 好想喝东西。
+      - 我有冲泡的雀巢三合一咖啡、旧街场白奶茶、红枣桂圆茶，全都是甜的。
+      - 今天看了一个视频，说是一个人一整年都是每天喝三瓶红酒，吃很多水果，于是突发胰腺炎，血糖超高，医生回天乏术。
+      - 好怕喝出什么毛病，可是真的好想喝呀😫
