--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@babel/preset-env": "^7.12.13",
     "@nuxt/content": "^1.11.1",
+    "@nuxtjs/sitemap": "^2.4.0",
     "nuxt": "2.12.2"
   },
   "devDependencies": {
